Alignment-fixand scrolling fix

--- a/src/app/day-view/day-view.component.sass
+++ b/src/app/day-view/day-view.component.sass
@@ -2,6 +2,8 @@ $accent-color: #e91e63
 
 .day-view
   width: 100%
+  height: 100%
+  padding-bottom: 20px
 
   & > header.day-header
     height: 100px
@@ -29,14 +31,21 @@ $accent-color: #e91e63
 
   & main.day-calendar
     width: 100%
-    height: calc(100% - 100px)
-    max-height: calc(100% - 100px)
+    max-height: calc(100vh - 100px)
     overflow: auto
     position: relative
+
+    & > div.events-container
+      height: calc(50px * 25)
+      margin-bottom: 30px
 
     & .time-slot-row
       width: 100%
       height: 50px
       padding: 0
       margin: 0
+
+    & .time-slot-row:last-child
+      margin-bottom: 30px
+
 
